[package]
name = "egui-table-click"
version = "0.1.0"
authors = ["Valeriy V. Vorotyntsev <valery.vv@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { path = "../../src/egui/crates/eframe" }
egui_extras = { path = "../../src/egui/crates/egui_extras" }
tracing-subscriber = "0.3"
