[package]
name = "egui-table-click"
version = "0.1.0"
authors = ["Valeriy V. Vorotyntsev <valery.vv@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/vvv/egui", branch = "table-row-framing", package = "eframe" }
egui_extras = { git = "https://github.com/vvv/egui", branch = "table-row-framing", package = "egui_extras" }
tracing-subscriber = "0.3"
