[package]
name = "egui-table-click"
version = "0.1.0"
authors = ["Valeriy V. Vorotyntsev <valery.vv@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/vvv/egui", branch = "table-row-select-and-frame", package = "eframe", features = [
  "persistence",
] }
egui_extras = { git = "https://github.com/vvv/egui", branch = "table-row-select-and-frame", package = "egui_extras" }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
